--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -14,8 +14,7 @@
                    placeholder="Campaign Name"
                    name="campaignName"
                    [(ngModel)]="campaignName"
-                   required
-                   #campaign="ngModel">
+                   required>
           </div>
           <div class="form-group col-9">
             <label class="card-title h5">Who do you want to send this campaign to?</label>
@@ -30,9 +29,8 @@
             </select>
           </div>
         <button class="btn btn-primary ml-3 px-4"
-                (click)="continueToSchedule()">Continue</button>
-        <!--[disabled]="f.invalid"-->
-        <!--<pre>{{f.value | json}}</pre>-->
+                (click)="continueToSchedule()"
+                [disabled]="f.invalid">Continue</button>
       </form>
     </div>
   </div>
@@ -43,7 +41,8 @@
       When do you want to schedule this campaign?
     </h3>
     <div class="card-body">
-      <form>
+      <form (ngSubmit)="onSubmit(f)"
+            #f="ngForm">
         <div class="col-12">
           <label class="card-title h5">Message Type</label>
           <br>
@@ -51,65 +50,91 @@
                  type="radio"
                  name="messageType"
                  value="oneTime"
-                 checked
-                 required> One Time
+                 id="oneTime"
+                 required
+                 [(ngModel)]="schedule.scheduleType"
+                 (click)="emptyCampaignTimesArray()">
+          <label for="oneTime">One Time</label>
 
           <input  class="ml-2 mr-1"
                   type="radio"
                   name="messageType"
                   value="multipleDates"
-                  required> On Multiple Dates
+                  id="multipleDates"
+                  required
+                  [(ngModel)]="schedule.scheduleType"
+                  (click)="emptyCampaignTimesArray()">
+          <label for="multipleDates">On Multiple Dates</label>
 
           <input class="ml-2 mr-1"
                  type="radio"
                  name="messageType"
                  value="recurring"
-                 required> Recurring
+                 id="recurring"
+                 required
+                 [(ngModel)]="schedule.scheduleType"
+                 (click)="emptyCampaignTimesArray()">
+          <label for="recurring">Recurring</label>
         </div>
-        <div class="col-9 mt-4">
+        <div class="col-9 mt-4"
+             *ngIf="schedule.scheduleType==='oneTime'">
           <label class="card-title h5">Campaign start date and time</label>
           <br>
           <input class="mr-1"
                  type="radio"
                  name="campaignStartTime"
-                 value="oneTime"
-                 checked
-                 required> Now
+                 value="Now"
+                 id="now"
+                 required
+                 [(ngModel)]="schedule.startTime">
+          <label for="now">Now</label>
           <input class="mr-1 ml-2"
                  type="radio"
                  name="campaignStartTime"
-                 value="later"
-                 required> Later
-          <div class="row"
-               *ngIf="true">
-            <div class=" col-md-4 col-sm-6 my-3  pr-0 form-inline">
-              <div class="input-group"
-                   daterangepicker
-                   [options]="singlePicker"
-                   (selected)="singleSelect($event)">
-              <span class="form-control uneditable-input pr-4"  name="daterange" >
-                  {{ singleDate | date:'M/dd/y' }}
-              </span>
-                <span class="input-group-btn">
-                <a type="button" class="btn btn-default"><i class="far fa-calendar-alt"></i></a>
-              </span>
-              </div>
-              <p class="ml-4 mt-3"style="font-size: 15px;">at</p>
-            </div>
-            <div class="col-md-7 form-inline border-bottom">
-              <input type="number" class="form-control col-3 mr-2" value="4" min="1" max="12">&#58;
-              <input type="number" class="form-control col-3 mx-2" value="10" min="0" max="55" step="5">
-              <select class="form-control col-4">
-                <option value="AM">AM</option>
-                <option value="PM">PM</option>
-              </select>
-            </div>
-          </div>
-        <div class="bg-light p-3 mb-3 rounded font-italic"><span class="font-weight-bold">Summary &#58;</span>  Laksh is my name</div>
-        </div>
-        <button class="btn btn-primary ml-3 px-4">Continue</button>
-      </form>
+                 value="Later"
+                 id="later"
+                 required
+                 [(ngModel)]="schedule.startTime"
+                 (click)="emptyCampaignTimesArray()">
+          <label for="later">Later</label>
+            <app-date-time *ngIf="schedule.startTime==='Later'"
+                           [campaignTimes]="schedule.campaignTimeList"></app-date-time>
 
+        </div>
+        <div class="col-9 mt-4"
+              *ngIf="schedule.scheduleType==='multipleDates'">
+          <label class="card-title mb-0 h5">Pick Dates</label>
+          <br>
+          <app-date-time [campaignTimes]="schedule.campaignTimeList"></app-date-time>
+          <div #parent></div>
+          <button type="button"
+                  class="btn btn-link py-0 pl-0 mb-2"
+                  (click)="addAnotherDateTime()">
+            <i class="fa fa-plus " aria-hidden="true"></i>
+            Add another date
+          </button>
+        </div>
+        <div class="bg-light p-3 mb-3 rounded font-italic">
+          <span class="font-weight-bold">
+            Summary &#58;
+          </span>
+          Send {{schedule.scheduleType}}
+          <span *ngIf="schedule.scheduleType=='oneTime'">
+            {{schedule.startTime}}
+          </span>
+          <p *ngIf="schedule.startTime==='Later' || schedule.scheduleType==='multipleDates'"
+             class="d-inline">
+            On
+            <span *ngFor="let campaignTime of schedule.campaignTimeList"
+                  class="mr-3">
+              {{campaignTime.date|date}} at {{campaignTime.hours}}:{{campaignTime.minutes}}
+            </span>
+          </p>
+        </div>
+        <button class="btn btn-primary ml-3 px-4"
+                type="submit">Continue
+        </button>
+      </form>
     </div>
   </div>
 </div>
