--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -29,7 +29,7 @@
             </select>
           </div>
         <button class="btn btn-primary ml-3 px-4"
-                (click)="continueToSchedule()"
+                (click)="continueToSchedule()" type="button"
                 [disabled]="f.invalid">Continue</button>
       </form>
     </div>
@@ -158,6 +158,10 @@
               <input type="number" class="form-control col-1">
               occurences
             </label>
+          </div>
+          <div class="col-12 mb-2">
+            Repeat:
+            <cron-editor [(cron)]="cronExpression" [disabled]="isCronDisabled" [(options)]="cronOptions">Cron here...</cron-editor>
           </div>
         </div>
         <div class="bg-light p-3 mb-3 rounded font-italic">
